<resources>
    <string name="app_name">squads_and_shots</string>
    <string name="squads_and_shots">Squads&amp;Shots</string>
    <string name="waiting_for_lead_to_start_the_game">Waiting for lead to start the game…</string>
    <string name="lobby_code">Lobby Code:</string>
    <string name="players">Players</string>
    <string name="start_game">Start Game</string>
    <string name="please_enter_game_code">PLEASE ENTER GAME CODE</string>
    <string name="xdlro">XDLRO</string>
    <string name="join_game">Join Game</string>
    <string name="warzone">Warzone</string>
    <string name="apex">Apex</string>
    <string name="fortnite">Fortnite</string>
    <string name="select_a_game">Select a game</string>
    <string name="finish_game">Finish Game</string>
    <string name="game_rules">Game Rules</string>
    <string name="your_secret_task">Your secret task</string>
    <string name="nominated_rules">Nominated Rules</string>
    <string name="the_following_people_will_have_to_drink">The following people, will have to drink?</string>
    <string name="yes_make_them_drink">Yes, make them drink!</string>
    <string name="timeToDrink">Time to drink</string>
    <string name="number_of_drinks_required">Number of drinks required:</string>
</resources>