<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="30dp"
    android:background="@drawable/dialog_style"
    android:elevation="10dp">

    <TextView
        android:id="@+id/chooseGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/roboto_font"
        android:textSize="42sp"
        android:textColor="@color/white"
        android:text="@string/select_a_game"/>

    <ImageView
        android:id="@+id/warzoneImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="22dp"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/apexImage"
        app:layout_constraintTop_toBottomOf="@id/chooseGameTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/warzone"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_font"
        app:layout_constraintLeft_toLeftOf="@id/warzoneImage"
        app:layout_constraintRight_toRightOf="@id/warzoneImage"
        app:layout_constraintTop_toBottomOf="@id/warzoneImage" />

    <ImageView
        android:id="@+id/apexImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="22dp"
        android:background="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/imageGuideline"
        app:layout_constraintRight_toRightOf="@id/imageGuideline"
        app:layout_constraintTop_toBottomOf="@id/chooseGameTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/apex"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_font"
        app:layout_constraintLeft_toLeftOf="@id/apexImage"
        app:layout_constraintRight_toRightOf="@id/apexImage"
        app:layout_constraintTop_toBottomOf="@id/apexImage" />

    <ImageView
        android:id="@+id/fortniteImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="22dp"
        android:background="@color/black"
        app:layout_constraintLeft_toRightOf="@id/apexImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chooseGameTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/fortnite"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_font"
        app:layout_constraintLeft_toLeftOf="@id/fortniteImage"
        app:layout_constraintRight_toRightOf="@id/fortniteImage"
        app:layout_constraintTop_toBottomOf="@id/fortniteImage" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/imageGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>