<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="12dp"
    android:paddingBottom="32dp"
    android:layout_margin="8dp"
    android:background="@drawable/dialog_style"
    android:elevation="10dp">

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/joinRoomProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/enterGameCodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/please_enter_game_code"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:elevation="6dp"
        android:fontFamily="@font/roboto_font"
        android:shadowColor="@color/black"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/warning_red"
        android:text="Invalid game code, please try again"
        android:paddingBottom="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/enterGameCodeText"
        app:layout_constraintLeft_toLeftOf="@id/enterGameCodeText"
        app:layout_constraintRight_toRightOf="@id/enterGameCodeText" />

    <EditText
        android:id="@+id/enterGameCodeEditText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/warning"
        android:background="@drawable/curved_and_inner_shadow"
        android:hint="@string/xdlro"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/joinGameButtonWithCode"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:fontFamily="@font/roboto_font"
        android:background="@drawable/dialog_buttons"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterGameCodeEditText"
        android:layout_marginTop="22sp"
        android:shadowColor="@color/black"
        android:elevation="10dp"
        android:text="@string/join_game"/>


</androidx.constraintlayout.widget.ConstraintLayout>