<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black">

    <TextView
        android:id="@+id/lobbyCodeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lobby_code"
        app:layout_constraintRight_toLeftOf="@id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/lobbyCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/white"
        android:textStyle="italic|bold"
        android:textSize="32sp"
        android:layout_marginStart="12dp"
        tools:text="GU30L"/>
    
    <LinearLayout
        android:id="@+id/titleSep"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lobbyCodeTitle"
        android:layout_marginTop="12dp"
        android:background="@color/white" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleSep"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/playersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:textColor="@color/white"
                android:textStyle="italic|bold"
                android:textSize="24sp"
                android:text="@string/players"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playerNameList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                app:layout_constraintTop_toBottomOf="@id/playersText"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:listitem="@layout/player_name_card"/>

            <Button
                android:id="@+id/startGameButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@id/playerNameList"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@color/purple_500"
                android:text="@string/start_game"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>